<resources>
    <string name="app_name">Team Tree</string>
    <string name="description_image_1">this is cardEntity back image</string>
    <string name="message_for_left_drawer">To be continue</string>
    <string name="order_card_fab_content_description">Draggable content for add cardEntity</string>
    <string name="empty_container_text">카드를 추가해주세요.</string>
    <string name="addNewCardUtil_fab_text">NEW</string>
    <string name="search_result_contact_number_tv_hint">전화번호 없음</string>
    <string name="btn_save_name">저장</string>
    <string name="btn_cancel_name">취소</string>
    <string name="btn_call_text">전화</string>
    <string name="btn_message_text">문자</string>
    <string name="container_title">%1$s, %2$s</string>
    <string name="text_card_delete">제거</string>
    <string name="card_title_hint">홍길동</string>
    <string name="card_contact_number_hint">010–1234–5678</string>
    <string name="card_shadow_text">CARD</string>
    <string name="card_remove_btn_text">X</string>
    <string name="empty_container_layer_title">add next : </string>
    <string name="next_arrow_desc">next arrow for indicate next item is exist.</string>
    <string name="prev_arrow_desc">previous arrow for indicate previous item is exist.</string>
    <string name="detail_main_image_view_desc">card image. click to spread image.</string>
    <string name="util_container_fab_desc">floating button. click to spread util buttons.</string>
    <string name="take_picture_fab_desc">floating button. click to spread util buttons.</string>
    <string name="open_gallery_fab_desc">floating button. click to spread util buttons.</string>
    <string name="load_contact_info_fab_desc">floating button. click to spread util buttons.</string>
    <string name="send_card_image_btn_desc">paper plain shape button. click to find target card. </string>
    <string name="detail_titleTv_text">이름 없음</string>
    <string name="detail_subtitleTv_text">서브타이틀 없음</string>
    <string name="detail_contactNumberTv_text">연락처 없음</string>
    <string name="detail_memoTv_text">메모 없음</string>
    <string name="detail_titleEt_text">입력 : 이름</string>
    <string name="detail_subtitleEt_text">입력 : 서브타이틀</string>
    <string name="detail_contactNumberEt_text">입력 : 연락처</string>
    <string name="detail_memoEt_text">입력 : 메모</string>
    <string name="detail_modify_btn_text">수정</string>
    <string name="detail_back_btn_text">되돌아가기</string>
    <string name="detail_save_btn_text">저장</string>
    <string name="detail_cancel_btn_text">취소</string>
    <string name="prev_page_btn_desc">page button. click to move previous page.</string>
    <string name="next_page_btn_desc">page button. click to move previous page.</string>
    <string name="call_btn_desc">call button. click to move calling screen.</string>
    <string name="message_btn_desc">message button. click to move messaging screen.</string>
    <string name="flower_icon_desc">flower image view. this view appeared when target item chosen.</string>
    <string name="search_item_selecting_btn_desc">dot button. click to fire finding card.</string>
    <string name="cardFront_cardSwitchRatioToCardFrame">0.15</string>
    <string name="mainBody_removeSwitchRatioToTopAppBar">1.0</string>
    <string name="detail_noteLabel">note :</string>
    <string name="searDrawer_settingsBtnDesc">Settings button. Click to move for settings page.</string>
    <!--    Settings Fragment-->
    <string name="settings_fragment_top_app_bar_title">설정</string>
    <string name="settings_fragment_oss_license_title">🚀 오픈소스 라이선스</string>
    <string name="splashActivity_storagePermissionRequestDialogMessage">
        Team tree는 앱 데이터 저장을 위해 \'저장공간 권한\'을 필요로 합니다.
        \n\n저장공간 사용을 켜주세요.</string>
    <string name="splashActivity_storagePermissionRequestDialogTitle">
        🧱저장공간 권한 요청</string>
    <string name="splashActivity_storagePermissionRequestDialogPositiveButtonText">
        SETTINGS</string>
    <string name="splashActivity_storagePermissionRequestDialogDeniedTitle">
        🙅</string>
    <string name="splashActivity_storagePermissionRequestDialogDeniedMessage">
        앱 필수 권한이 거부되어 앱을 종료합니다.</string>
    <string name="splashActivity_storagePermissionRequestDialogDeniedPositiveButtonText">
        종료</string>
    <string name="default_positiveText">확인</string>
    <string name="default_negativeText">취소</string>
    <string name="main_detailActivityResultNotOk">이전 화면 세션이 만료되었습니다. 앱을 재실행해 주세요.</string>
    <string name="main_callDialogAlertDialogTitle"> 📞 전화 다이얼</string>
    <string name="main_callDialogAlertDialogMessage">에 전화걸기 화면으로 이동하시겠습니까?</string>
    <string name="main_messageDialogAlertDialogTitle"> ✉️ 메시지 다이얼</string>
    <string name="main_messageDialogAlertDialogMessage">에 메시지 보내기 화면으로 이동하시겠습니까?</string>
    <string name="splash_flexibleUpdateCompleteSnackBarMessage">🌠새로운 버전 다운로드 완료!</string>
    <string name="splash_flexibleUpdateCompleteActionText">설치</string>
    <string name="splash_updateFailText">
        Team tree 업데이트 실패. 앱 종료 후 다시 시도해 주세요.</string>
    <string name="detail_cameraAlertDialogTitle">📷</string>
    <string name="detail_cameraAlertDialogMessage">카메라로 이동하시겠습니까?</string>
    <string name="detail_cameraNotFoundMessage">기기가 카메라를 지원하지 않습니다.</string>
    <string name="detail_takePictureIntentErrorText">사진촬영을 할 수 없습니다.</string>
</resources>