<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable
            name="viewModel"
            type="com.choco_tyranno.team_tree.ui.CardViewModel" />
        <variable
            name="card"
            type="com.choco_tyranno.team_tree.domain.card_data.CardDto" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:gravity="center_vertical"
        android:paddingVertical="10dp">

        <TextView
            android:id="@+id/search_result_title_tv"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="70dp"
            android:fontFamily="@font/humanletter"
            tools:text="오너스클럽 김승용회장"
            android:singleLine="true"
            android:text="@{card.title}"
            android:textColor="@color/colorAccent"
            android:textSize="18sp"
            app:layout_constraintVertical_bias="0.2"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/search_result_contact_number_tv"
            android:layout_width="300dp"
            tools:text="010-2222-2222"
            android:layout_height="wrap_content"
            android:layout_marginStart="70dp"
            android:fontFamily="@font/humanletter"
            android:singleLine="true"
            android:text="@{card.contactNumber}"
            android:hint="@string/search_result_contact_number_tv_hint"
            android:textColor="@color/colorAccent"
            android:textSize="18sp"
            app:layout_constraintVertical_bias="0.8"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:id="@+id/selecting_btn_assist"
            onClickListener="@{viewModel.onClickListenerForFindingSearchingResultTargetBtn}"
            android:layout_width="70dp"
            android:layout_height="60dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <ImageView
            android:id="@+id/search_item_selecting_btn"
            android:contentDescription="@string/search_item_selecting_btn_desc"
            android:layout_marginStart="30dp"
            android:backgroundTint="@color/colorAccent_c"
            android:background="@drawable/rounded_item"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_width="10dp"
            android:layout_height="10dp"/>

        <ImageView
            android:id="@+id/send_card_image_btn"
            android:src="@drawable/baseline_send_white_36"
            app:tint="@color/colorAccent_c"
            android:visibility="invisible"
            android:layout_marginStart="10dp"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:clickable="true"
            android:background="@android:color/transparent"
            android:contentDescription="@string/send_card_image_btn_desc"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>