<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:bind="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <variable
            name="viewModel"
            type="com.choco_tyranno.team_tree.presentation.CardViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main_constraint"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#fff"
        tools:context=".card_crud_feature.presentation.MainCardActivity">

        <include
            android:id="@+id/main_body"
            layout="@layout/activity_main_body"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            bind:viewModel="@{viewModel}" />


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/top_app_bar"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            app:layout_constraintTop_toTopOf="parent">

            <View
                android:id="@+id/top_app_bar_assist"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:background="@drawable/default_card_image_01"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/app_name_tv"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_marginStart="20dp"
                android:fontFamily="@font/humanletter"
                android:gravity="center"
                android:text="@string/app_name"
                android:textAllCaps="false"
                android:textColor="@color/colorPrimary"
                app:layout_constraintBottom_toBottomOf="@id/top_app_bar_assist"
                app:layout_constraintLeft_toLeftOf="@id/top_app_bar_assist"
                app:layout_constraintTop_toTopOf="@id/top_app_bar_assist" />

            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/main_mode_switch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:elevation="15dp"
                android:onCheckedChanged="@{(view, isOn)->viewModel.onModeChanged(view, isOn)}"
                app:layout_constraintBottom_toBottomOf="@id/top_app_bar_assist"
                app:layout_constraintRight_toRightOf="@id/top_app_bar_assist"
                app:layout_constraintTop_toTopOf="@id/top_app_bar_assist" />


            <ImageView
                android:id="@+id/prev_container_arrow"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:alpha="0"
                android:contentDescription="@string/prev_arrow_desc"
                android:elevation="15dp"
                android:paddingTop="10dp"
                android:paddingBottom="30dp"
                android:src="@drawable/ic_baseline_keyboard_arrow_up_24"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/top_app_bar_assist"
                app:onDragListener="@{viewModel.onDragListenerForTopArrow}" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/bottom_app_bar"
            android:layout_width="match_parent"
            android:layout_height="135dp"
            app:layout_constraintBottom_toBottomOf="parent">

            <View
                android:id="@+id/bottom_app_bar_assist"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:alpha="0.1"
                android:background="@color/colorPrimaryDark"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent" />

            <Button
                android:id="@+id/addNewCardUtil_fab"
                android:layout_width="55dp"
                android:layout_height="55dp"
                android:layout_marginBottom="20dp"
                android:backgroundTint="@color/colorAccent_b"
                android:contentDescription="@string/order_card_fab_content_description"
                android:elevation="20dp"
                android:onLongClickListener="@{viewModel.onLongListenerForCreateCardUtilFab}"
                android:rotation="50"
                android:text="@string/addNewCardUtil_fab_text"
                android:textColor="#fff"
                android:textSize="7sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent" />

            <ImageView
                android:id="@+id/next_container_arrow"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:alpha="0"
                android:contentDescription="@string/next_arrow_desc"
                android:elevation="15dp"
                android:paddingTop="30dp"
                android:paddingBottom="30dp"
                android:src="@drawable/ic_baseline_keyboard_arrow_down_24"
                app:layout_constraintBottom_toTopOf="@id/bottom_app_bar_assist"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:onDragListener="@{viewModel.onDragListenerForBottomArrow}" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.fragment.app.FragmentContainerView
            android:id="@+id/fragmentContainerView"
            android:name="androidx.navigation.fragment.NavHostFragment"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:visibility="@{viewModel.isSettingsOn() ? View.VISIBLE:View.GONE}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            bind:defaultNavHost="true"
            bind:navGraph="@navigation/nav_graph"
            tools:layout_editor_absoluteX="1dp"
            tools:layout_editor_absoluteY="314dp" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>