<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <variable
            name="cardRootReference"
            type="com.choco_tyranno.team_tree.databinding.ItemCardFrameBindingImpl" />

        <variable
            name="card"
            type="com.choco_tyranno.team_tree.domain.card_data.CardDto" />

        <variable
            name="cardState"
            type="com.choco_tyranno.team_tree.presentation.card_rv.CardState" />

        <variable
            name="frontState"
            type="com.choco_tyranno.team_tree.presentation.card_rv.CardState.Front" />

        <variable
            name="viewModel"
            type="com.choco_tyranno.team_tree.presentation.CardViewModel" />
    </data>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/frontCard_cardView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:alpha="@{cardState.front.cardFrontAlpha}"
        android:background="#fff"
        android:clickable="true"
        android:clipChildren="false"
        android:clipToPadding="false"
        android:focusable="true"
        android:visibility="@{cardState.front.cardFrontVisibility}"
        app:cardCornerRadius="8dp"
        app:cardElevation="12dp"
        app:onCardTouchListener="@{viewModel.onTouchListenerForCard}"
        tools:layout_height="200dp"
        tools:layout_width="400dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cardContentsLayoutManager"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/textContentsStartLine"
                app:layout_constraintGuide_percent="0.1"
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/titleTopLine"
                app:layout_constraintGuide_percent="0.25"
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/titleBottomLine"
                app:layout_constraintGuide_percent="0.4"
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/titleEditor"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:autoSizeTextType="uniform"
                android:background="@android:color/transparent"
                android:fontFamily="@font/humanletter"
                android:hint="@string/card_title_hint"
                android:inputType="text"
                android:singleLine="true"
                android:text="@{card.title}"
                android:textColor="@color/colorAccent"
                android:visibility="@{frontState.mode==frontState.EDIT_MODE? View.VISIBLE : View.INVISIBLE}"
                app:layout_constraintTop_toTopOf="@id/titleTopLine"
                app:layout_constraintBottom_toBottomOf="@id/titleBottomLine"
                app:layout_constraintStart_toStartOf="@id/textContentsStartLine"
                app:layout_constraintEnd_toEndOf="@id/switchStartLine"
                android:layout_marginEnd="10dp"
                tools:text="EditText" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/title"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:autoSizeTextType="uniform"
                android:fontFamily="@font/humanletter"
                android:hint="@string/card_title_hint"
                android:singleLine="true"
                android:text="@{card.title}"
                android:textColor="@color/colorAccent"
                android:textSize="24sp"
                android:visibility="@{frontState.mode==frontState.READ_MODE? View.VISIBLE : View.INVISIBLE}"
                app:layout_constraintTop_toTopOf="@id/titleTopLine"
                app:layout_constraintBottom_toBottomOf="@id/titleBottomLine"
                app:layout_constraintStart_toStartOf="@id/textContentsStartLine"
                app:layout_constraintEnd_toEndOf="@id/switchStartLine"
                android:layout_marginEnd="10dp"
                tools:text="김땡땡" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/switchStartLine"
                app:layout_constraintGuide_percent="0.85"
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/switchTopLine"
                app:layout_constraintGuide_percent="0.1"
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/switchBottomLine"
                app:layout_constraintGuide_percent="0.25"
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/modeSwitch"
                app:layout_constraintTop_toTopOf="@id/switchTopLine"
                app:layout_constraintBottom_toBottomOf="@id/switchBottomLine"
                app:layout_constraintStart_toStartOf="@id/switchStartLine"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginEnd="10dp"
                android:elevation="12dp"
                android:onCheckedChanged="@{(view, isOn)->cardState.front.onSwitchChanged(card, isOn)}" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/contactNumberTopLine"
                app:layout_constraintGuide_percent="0.5"
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/contactNumberBottomLine"
                app:layout_constraintGuide_percent="0.65"
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />


            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/contactNumber"
                app:layout_constraintStart_toStartOf="@id/textContentsStartLine"
                app:layout_constraintEnd_toEndOf="@id/switchStartLine"
                app:layout_constraintTop_toTopOf="@id/contactNumberTopLine"
                app:layout_constraintBottom_toBottomOf="@id/contactNumberBottomLine"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:autoSizeTextType="uniform"
                android:fontFamily="@font/humanletter"
                android:hint="@string/card_contact_number_hint"
                android:singleLine="true"
                android:text="@{card.contactNumber}"
                android:textColor="@color/colorAccent"
                android:visibility="@{frontState.mode==frontState.READ_MODE? View.VISIBLE : View.INVISIBLE}"
                tools:text="010-3355-5252" />


            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/contactNumberEditor"
                app:layout_constraintStart_toStartOf="@id/textContentsStartLine"
                app:layout_constraintEnd_toEndOf="@id/switchStartLine"
                app:layout_constraintTop_toTopOf="@id/contactNumberTopLine"
                app:layout_constraintBottom_toBottomOf="@id/contactNumberBottomLine"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:autoSizeTextType="uniform"
                android:background="@android:color/transparent"
                android:fontFamily="@font/humanletter"
                android:hint="@string/card_contact_number_hint"
                android:inputType="phone"
                android:onTextChanged="@{()->cardState.front.onContactNumberEditTextChanged(cardRootReference)}"
                android:singleLine="true"
                android:text="@{card.contactNumber}"
                android:textColor="@color/colorAccent"
                android:textSize="24sp"
                android:visibility="@{frontState.mode==frontState.EDIT_MODE? View.VISIBLE : View.INVISIBLE}" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <!-- edit mode start-->

        <com.google.android.material.button.MaterialButton
            android:id="@+id/frontCard_editTool_saveBtn"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="90dp"
            android:layout_height="50dp"
            android:layout_gravity="bottom|start"
            android:layout_marginStart="10dp"
            android:fontFamily="@font/humanletter"
            android:onClick="@{(saveButton)->frontState.onSaveButtonClicked(cardRootReference, card, viewModel)}"
            android:text="@string/btn_save_name"
            android:textColor="@color/colorAccent"
            android:visibility="@{frontState.mode==frontState.EDIT_MODE? View.VISIBLE : View.INVISIBLE}"
            app:cornerRadius="20dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/frontCard_editTool_cancelBtn"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="90dp"
            android:layout_height="50dp"
            android:layout_gravity="bottom|end"
            android:layout_marginEnd="10dp"
            android:fontFamily="@font/humanletter"
            android:onClick="@{(cancelButton)->frontState.onCancelButtonClicked(cardRootReference, card)}"
            android:text="@string/btn_cancel_name"
            android:textColor="@color/colorAccent"
            android:visibility="@{frontState.mode==frontState.EDIT_MODE? View.VISIBLE : View.INVISIBLE}"
            app:cornerRadius="20dp" />


        <!-- read mode start-->

        <ImageButton
            android:id="@+id/frontCard_callBtn"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="90dp"
            android:layout_height="50dp"
            android:layout_gravity="bottom|start"
            android:layout_marginStart="10dp"
            android:contentDescription="@string/call_btn_desc"
            android:src="@drawable/ic_call_01"
            android:visibility="@{frontState.mode==frontState.READ_MODE? View.VISIBLE : View.INVISIBLE}"
            app:cornerRadius="20dp"
            app:onClickListener="@{viewModel.onClickListenerForCallBtn}" />

        <ImageButton
            android:id="@+id/frontCard_messageBtn"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="90dp"
            android:layout_height="50dp"
            android:layout_gravity="bottom|end"
            android:layout_marginEnd="10dp"
            android:contentDescription="@string/message_btn_desc"
            android:src="@drawable/ic_message_01"
            android:visibility="@{frontState.mode==frontState.READ_MODE? View.VISIBLE : View.INVISIBLE}"
            app:cornerRadius="20dp"
            app:onClickListener="@{viewModel.onClickListenerForMessageBtn}" />

    </com.google.android.material.card.MaterialCardView>
</layout>