<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.choco_tyranno.team_tree.presentation.CardViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            app:layout_constraintWidth_percent="0.9"
            app:layout_constraintHeight_percent="1.0"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:background="#fff"
            android:layout_width="0dp"
            android:layout_height="0dp">

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline_searchDrawer_settingsEndLine"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.98"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <View
                app:layout_constraintWidth_percent="0.02"
                app:layout_constraintEnd_toEndOf="parent"
                android:background="@color/colorAccent_c"
                app:layout_constraintHeight_percent="0.08"
                app:layout_constraintTop_toTopOf="@id/card_search_view"
                app:layout_constraintBottom_toBottomOf="@id/card_search_view"
                android:layout_width="0dp"
                android:layout_height="0dp"/>

            <androidx.appcompat.widget.SearchView
                android:id="@+id/card_search_view"
                onQueryTextListener="@{viewModel.onQueryTextListenerForSearchingCard}"
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:layout_constraintWidth_percent="0.9"
                app:layout_constraintHeight_percent="0.08"
                android:background="@color/colorAccent_c"
                android:iconifiedByDefault="true"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">
            </androidx.appcompat.widget.SearchView>

            <ImageButton
                android:background="@color/colorAccent_c"
                android:src="@drawable/ic_baseline_settings_40"
                android:onClickListener="@{viewModel.onClickListenerForSettingButton}"
                app:layout_constraintWidth_percent="0.1"
                app:layout_constraintBottom_toBottomOf="@id/card_search_view"
                app:layout_constraintEnd_toEndOf="@id/guideline_searchDrawer_settingsEndLine"
                app:layout_constraintStart_toEndOf="@id/card_search_view"
                app:layout_constraintTop_toTopOf="@id/card_search_view"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:contentDescription="@string/searDrawer_settingsBtnDesc" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/card_search_result_recyclerview"
                recyclerViewAdapter="@{viewModel.searchingResultRecyclerViewAdapter}"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/card_search_view"
                android:layout_marginTop="10dp"
                android:orientation="vertical"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/card_search_view"
                tools:itemCount="6"
                tools:listitem="@layout/item_searching_result" />

            <ImageButton
                android:id="@+id/prev_page_btn"
                onClickListener="@{viewModel.onClickListenerForMovingPageBundleBtn}"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginStart="20dp"
                android:layout_marginBottom="10dp"
                android:alpha="0.3"
                android:background="@android:color/transparent"
                android:contentDescription="@string/prev_page_btn_desc"
                android:src="@drawable/ic_baseline_keyboard_arrow_left_24"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/page_navigation_recyclerview"
                recyclerViewAdapter="@{viewModel.pageNavigationRecyclerViewAdapter}"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxWidth="400dp"
                android:orientation="horizontal"
                android:paddingVertical="5dp"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/card_search_result_recyclerview"
                tools:itemCount="5"
                tools:listitem="@layout/item_page_navigation" />

            <ImageButton
                android:id="@+id/next_page_btn"
                onClickListener="@{viewModel.onClickListenerForMovingPageBundleBtn}"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="10dp"
                android:alpha="0.3"
                android:background="@android:color/transparent"
                android:contentDescription="@string/next_page_btn_desc"
                android:src="@drawable/ic_baseline_keyboard_arrow_right_24"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintRight_toRightOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>